gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/valid/mapa_simples_2_comentado_info_formatado.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346936524680" ID="ID_1631033891" MODIFIED="1346936527557" TEXT="MM">
<node CREATED="1346936528019" ID="ID_631877200" MODIFIED="1346938812060" POSITION="right" TEXT="UC: Cen&#xe1;rio 1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<richcontent TYPE="NOTE"><html>
  <head>
    
  </head>
  <body>
    <p>
      COMENT&#193;RIO DO CEN&#193;RIO
    </p>
  </body>
</html>
</richcontent>
<node CREATED="1346936544203" ID="ID_1355313329" MODIFIED="1346936560432" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o:  A&#xe7;&#xe3;o 1">
<node CREATED="1346936561059" ID="ID_130464107" MODIFIED="1346939686913" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 2 COMENTADA">
<richcontent TYPE="NOTE"><html>
  <head>
    
  </head>
  <body>
    <p>
      COMENT&#193;RIO DO PASSO 2
    </p>
  </body>
</html>
</richcontent>
<node CREATED="1346936577869" ID="ID_568411710" MODIFIED="1346936685053" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 3">
<node CREATED="1346936686881" ID="ID_1304479391" MODIFIED="1346939691582" TEXT="Sequ&#xea;ncia: 4&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 4 COMENTADA">
<richcontent TYPE="NOTE"><html>
  <head>
    
  </head>
  <body>
    <p>
      COMENT&#193;RIO DO PASSO 4.
    </p>
  </body>
</html>
</richcontent>
</node>
</node>
</node>
<node CREATED="1346940581968" ID="ID_446234905" MODIFIED="1346941157866" TEXT="RAMIFICA&#xc7;&#xc3;O 1 LETRA MAIOR NEGRITADA">
<font BOLD="true" NAME="SansSerif" SIZE="16"/>
<icon BUILTIN="info"/>
<node CREATED="1346940346046" ID="ID_1617448683" MODIFIED="1346940361418" TEXT="Sequ&#xea;ncia: 2a.1&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 2a.1 N&#xc3;O COMENTADA&#xa;">
<node CREATED="1346940362047" ID="ID_662953457" MODIFIED="1346940397618" TEXT="Sequ&#xea;ncia: 2a.2&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 2a.2 COMENTADA">
<richcontent TYPE="NOTE"><html>
  <head>
    
  </head>
  <body>
    <p>
      COMENTARIO DA ACAO 2a.2
    </p>
  </body>
</html></richcontent>
</node>
</node>
</node>
</node>
</node>
</node>
</map>
